--- a/NMPAnchorOverlayViewExample/Main.storyboard
+++ b/NMPAnchorOverlayViewExample/Main.storyboard
@@ -22,16 +22,16 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="r1W-wF-Y74" customClass="NMPAnchorOverlayView" customModule="NMPAnchorOverlayViewExample" customModuleProvider="target">
-                                <rect key="frame" x="20" y="417" width="335" height="230"/>
+                                <rect key="frame" x="20" y="447" width="335" height="200"/>
                                 <subviews>
-                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="4" translatesAutoresizingMaskIntoConstraints="NO" id="mzF-yC-9YT">
-                                        <rect key="frame" x="10" y="10" width="315" height="210"/>
+                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="14" translatesAutoresizingMaskIntoConstraints="NO" id="mzF-yC-9YT">
+                                        <rect key="frame" x="10" y="25" width="315" height="150"/>
                                         <subviews>
                                             <stackView opaque="NO" contentMode="scaleToFill" verticalCompressionResistancePriority="250" distribution="fillEqually" spacing="3" translatesAutoresizingMaskIntoConstraints="NO" id="b0A-W1-4ei">
-                                                <rect key="frame" x="0.0" y="0.0" width="315" height="103"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="315" height="68"/>
                                                 <subviews>
                                                     <button opaque="NO" contentMode="scaleAspectFit" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="IjD-2y-DGF" userLabel="b2">
-                                                        <rect key="frame" x="0.0" y="0.0" width="103" height="103"/>
+                                                        <rect key="frame" x="0.0" y="0.0" width="103" height="68"/>
                                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                         <state key="normal" image="playful"/>
                                                         <userDefinedRuntimeAttributes>
@@ -44,7 +44,7 @@
                                                         </connections>
                                                     </button>
                                                     <button opaque="NO" contentMode="scaleAspectFit" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="mjB-Jr-nd6" userLabel="b3">
-                                                        <rect key="frame" x="106" y="0.0" width="103" height="103"/>
+                                                        <rect key="frame" x="106" y="0.0" width="103" height="68"/>
                                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                         <state key="normal" image="bark"/>
                                                         <userDefinedRuntimeAttributes>
@@ -57,7 +57,7 @@
                                                         </connections>
                                                     </button>
                                                     <button opaque="NO" contentMode="scaleAspectFit" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="JXc-Hw-Qgd" userLabel="b4">
-                                                        <rect key="frame" x="212" y="0.0" width="103" height="103"/>
+                                                        <rect key="frame" x="212" y="0.0" width="103" height="68"/>
                                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                         <state key="normal" image="sweet"/>
                                                         <userDefinedRuntimeAttributes>
@@ -73,10 +73,10 @@
                                                 <color key="backgroundColor" red="0.93725490570000003" green="0.93725490570000003" blue="0.95686274770000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                             </stackView>
                                             <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="fUn-ls-BF6">
-                                                <rect key="frame" x="0.0" y="107" width="315" height="103"/>
+                                                <rect key="frame" x="0.0" y="82" width="315" height="68"/>
                                                 <subviews>
                                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gHJ-Yr-jW6">
-                                                        <rect key="frame" x="0.0" y="0.0" width="315" height="103"/>
+                                                        <rect key="frame" x="0.0" y="0.0" width="315" height="68"/>
                                                         <color key="backgroundColor" red="0.7019608021" green="0.7019608021" blue="0.7019608021" alpha="1" colorSpace="calibratedRGB"/>
                                                         <fontDescription key="fontDescription" type="system" pointSize="25"/>
                                                         <state key="normal" title="Big Button">
@@ -92,7 +92,7 @@
                                             </stackView>
                                         </subviews>
                                         <constraints>
-                                            <constraint firstItem="fUn-ls-BF6" firstAttribute="height" secondItem="b0A-W1-4ei" secondAttribute="height" id="EbI-a9-Tc0"/>
+                                            <constraint firstItem="fUn-ls-BF6" firstAttribute="height" secondItem="b0A-W1-4ei" secondAttribute="height" id="y1Q-nq-shg"/>
                                         </constraints>
                                     </stackView>
                                 </subviews>
@@ -100,9 +100,9 @@
                                 <constraints>
                                     <constraint firstItem="mzF-yC-9YT" firstAttribute="leading" secondItem="r1W-wF-Y74" secondAttribute="leading" constant="10" id="7EP-g8-hDv"/>
                                     <constraint firstAttribute="trailing" secondItem="mzF-yC-9YT" secondAttribute="trailing" constant="10" id="ECD-Jj-tcN"/>
-                                    <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="mzF-yC-9YT" secondAttribute="bottom" constant="10" id="jQd-HU-pTP"/>
-                                    <constraint firstItem="mzF-yC-9YT" firstAttribute="centerY" secondItem="r1W-wF-Y74" secondAttribute="centerY" id="vS4-EY-9U6"/>
-                                    <constraint firstAttribute="height" constant="230" identifier="ht" id="xAg-qi-4R2"/>
+                                    <constraint firstItem="mzF-yC-9YT" firstAttribute="top" relation="greaterThanOrEqual" secondItem="r1W-wF-Y74" secondAttribute="top" constant="25" id="d7U-ig-EWH"/>
+                                    <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="mzF-yC-9YT" secondAttribute="bottom" priority="999" constant="25" id="pjP-UQ-Pvj"/>
+                                    <constraint firstAttribute="height" constant="200" identifier="ht" id="xAg-qi-4R2"/>
                                 </constraints>
                                 <userDefinedRuntimeAttributes>
                                     <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
